--- a/index.html
+++ b/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume SIte</title>
+    <title>Ayush Agrawal</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/home.css">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto:400,500&display=swap" rel="stylesheet">
+    <script src="js/home.js"></script>
+  </head>
 </head>
 <body>
-    
+    <div class="qb-header">
+        <nav class="navbar navbar-expand-md navbar-dark qb-navbar">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon qb-font-light"></span>
+            </button>
+            <div class="collapse navbar-collapse" style="position: relative;" id="collapsibleNavbar">
+                <div class="qb-navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link qb-font-light" href="#">Home</a>
+                        </li>
+                        <li class="nav-item iBlock">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item iBlock">
+                            <a class="nav-link" href="#">Projects</a>
+                        </li>    
+                        <li class="nav-item iBlock">
+                            <a class="nav-link" href="#">Skills</a>
+                        </li>    
+                        <li class="nav-item iBlock">
+                            <a class="nav-link" href="#">Contact Me</a>
+                        </li>    
+                    </ul>
+                </div>
+            </div>  
+        </nav>
+    </div>
+
+    <div class="qb-wall">
+        <div class="qb-wall-bg img-cover" style="background-image: url('/images/31225.jpg');">
+            <div class="qb-wall-cover">
+                <div class="qb-wall-text">
+                    Developer is an organism <br>that turns coffee into code1
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
