--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="qb-wall">
-        <div class="qb-wall-bg img-cover" style="background-image: url('/images/31225.jpg');">
+        <div class="qb-wall-bg img-cover" style="background-image: url('/images/31225.JPG');">
             <div class="qb-wall-cover">
                 <div class="qb-wall-content">
                     <div class="qb-wall-text">
