--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="#About">About</a>
                         </li>
                         <li class="nav-item iBlock">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="#Projects">Projects</a>
                         </li>    
                         <li class="nav-item iBlock">
                             <a class="nav-link" href="#">Skills</a>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="qb-wall">
-        <div class="qb-wall-bg img-cover" style="background-image: url('/images/31225.JPG');">
+        <div class="qb-wall-bg img-cover" style="background-image: url('../images/31225.JPG');">
             <div class="qb-wall-cover">
                 <div class="qb-wall-content">
                     <div class="qb-wall-text">
@@ -73,7 +73,7 @@
                     Hi There !
                     <br> I Am Ayush Agrawal.
                 </div>
-                <div class="qb-info-card-text qb-info-card-width-limit">
+                <div class="qb-info-card-text qb-info-card-text-padding qb-info-card-width-limit">
                     I'm a Web Developer and a Competitve Coder.
                     <br> <br> I'm doing my undergraduation at the National Institute of Technology - Raipur, graduating with a B.Tech degree in Computer Science and Engineering, and I spent most of my time coding and learning about new Techs.
                     <br> <br> People have coding as one of there hobies but for me coding is much more than hobby or passion. 
@@ -82,19 +82,29 @@
                     <br>
                 </div>
             </div>
-            <div class="qb-info-card qb-card-translate ">
+            <div class="qb-info-card qb-card-translate" id="Projects">
                 <div class="qb-info-card-head">
                     Projects
                 </div>
                 <div class="qb-info-card-text qb-info-card-width-full">
-                    <div class="card qb-project-card">
-                        Endurance
+                    <div class="qb-projects-info">
+                        I am new to this world of Web Development. 
+                        <br>But I had few projects that might fascinate you.
+                        <br>
                     </div>
-                    <div class="card qb-project-card">
-                        Endurance
-                    </div>
-                    <div class="card qb-project-card">
-                        Endurance
+                    <div class="qb-projects">
+                        <div class="card qb-project-card">
+                            <a href="https://ayushagrawal25.github.io/Endurance" style="text-decoration: none;">Endurance</a>
+                        </div>
+                        <div class="card qb-project-card">
+                            <a href="https://www.tedxnitraipur.com" style="text-decoration: none;">TED<sup>x</sup> NIT Raipur</a>
+                        </div>
+                        <div class="card qb-project-card">
+                            <a href="https://ayushagrawal25.github.io/calculator" style="text-decoration: none;">Calculator</a>
+                        </div>
+                        <div class="card qb-project-card">
+                            <a href="https://ayushagrawal25.github.io/calculator" style="text-decoration: none;">Image Cropper</a>
+                        </div>
                     </div>
                 </div>
             </div>
