--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="qb-wall">
-        <div class="qb-wall-bg qbImgCover" style="background-image: url('/images/31225.jpg');">
+        <div class="qb-wall-bg qbImgCover" style="background-image: url('images/31225.jpg');">
             <div class="qb-wall-cover">
                 <div class="qb-wall-content">
                     <div class="qb-wall-text">
