Final Touch But Footer Left

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/fontawesome.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Roboto:400,500&display=swap" rel="stylesheet">
     <script src="js/home.js"></script>
   </head>
@@ -96,15 +96,27 @@
                     </div>
                     <div class="qb-projects">
                         <div class="card qb-project-card qbCardShadow">
+                            <div class="qb-project-card-icon">
+                                <i class="fas fa-dumbbell"></i>
+                            </div>
                             <a href="https://ayushagrawal25.github.io/Endurance" style="text-decoration: none;">Endurance</a>
                         </div>
                         <div class="card qb-project-card qbCardShadow">
+                            <div class="qb-project-card-icon">
+                                TED<sup style="color:red">x</sup>
+                            </div>
                             <a href="https://www.tedxnitraipur.com" style="text-decoration: none;">TED<sup>x</sup> NIT Raipur</a>
                         </div>
                         <div class="card qb-project-card qbCardShadow">
+                            <div class="qb-project-card-icon">
+                                <i class="fas fa-calculator"></i>
+                            </div>
                             <a href="https://ayushagrawal25.github.io/calculator" style="text-decoration: none;">Calculator</a>
                         </div>
                         <div class="card qb-project-card qbCardShadow">
+                            <div class="qb-project-card-icon">
+                                <i class="fas fa-crop"></i>
+                            </div>
                             <a href="https://ayushagrawal25.github.io/calculator" style="text-decoration: none;">Image Cropper</a>
                         </div>
                     </div>
@@ -125,67 +137,73 @@
                         <div class="qb-skill-cards">
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
+                                    <i class="far fa-file-code"></i>
                                 </div>
                                 <div class="qb-skill-card-text">HTML</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
+                                    <i class="fab fa-css3-alt"></i>
                                 </div>
-                                <div class="qb-skill-card-text">HTML</div>
+                                <div class="qb-skill-card-text">CSS</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
+                                    <i class="fab fa-js-square"></i>
                                 </div>
-                                <div class="qb-skill-card-text">HTML</div>
+                                <div class="qb-skill-card-text">JS</div>
+                            </div>
+                            <div class="qb-skill-card card qbCardShadow">
+                                <div class="qb-skill-card-icon">
+                                    <i class="fab fa-angular"></i>
+                                </div>
+                                <div class="qb-skill-card-text">Angular</div>
+                            </div>
+                            <div class="qb-skill-card card qbCardShadow">
+                                <div class="qb-skill-card-icon">
+                                    <i class="fab fa-angular"></i><span style="font-size: 25px;">js</span>
+                                </div>
+                                <div class="qb-skill-card-text">AngularJs</div>
+                            </div>
+                            <div class="qb-skill-card card qbCardShadow">
+                                <div class="qb-skill-card-icon">
+                                    <i class="fab fa-react"></i>
+                                </div>
+                                <div class="qb-skill-card-text">React</div>
                             </div>
                         </div>
                         <div class="qb-skill-head">
-                            Front-End
+                            Back-End
                         </div>
                         <div class="qb-skill-cards">
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
+                                    <i class="fab fa-node"></i>
                                 </div>
-                                <div class="qb-skill-card-text">HTML</div>
+                                <div class="qb-skill-card-text">NodeJs</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
+                                    <i class="fab fa-php"></i>
                                 </div>
-                                <div class="qb-skill-card-text">HTML</div>
-                            </div>
-                            <div class="qb-skill-card card qbCardShadow">
-                                <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
-                                </div>
-                                <div class="qb-skill-card-text">HTML</div>
+                                <div class="qb-skill-card-text">PHP</div>
                             </div>
                         </div>
                         <div class="qb-skill-head">
-                            Front-End
+                            Programming Language
                         </div>
                         <div class="qb-skill-cards">
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
+                                    C++
                                 </div>
-                                <div class="qb-skill-card-text">HTML</div>
+                                <div class="qb-skill-card-text">C++/C</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
+                                    <i class="fab fa-python"></i>
                                 </div>
-                                <div class="qb-skill-card-text">HTML</div>
-                            </div>
-                            <div class="qb-skill-card card qbCardShadow">
-                                <div class="qb-skill-card-icon">
-                                    <i class="fab fa-node-js"></i>
-                                </div>
-                                <div class="qb-skill-card-text">HTML</div>
+                                <div class="qb-skill-card-text">Python</div>
                             </div>
                         </div>
                     </div>
