--- a/index.html
+++ b/index.html
@@ -99,25 +99,25 @@
                             <div class="qb-project-card-icon">
                                 <i class="fas fa-dumbbell"></i>
                             </div>
-                            <a href="https://ayushagrawal25.github.io/Endurance" style="text-decoration: none;">Endurance</a>
+                            <a href="https://ayushagrawal25.github.io/Endurance" class="qbCardTitle" style="text-decoration: none;">Endurance</a>
                         </div>
                         <div class="card qb-project-card qbCardShadow">
                             <div class="qb-project-card-icon">
                                 TED<sup style="color:red">x</sup>
                             </div>
-                            <a href="https://www.tedxnitraipur.com" style="text-decoration: none;">TED<sup>x</sup> NIT Raipur</a>
+                            <a href="https://www.tedxnitraipur.com" class="qbCardTitle" style="text-decoration: none;">TED<sup>x</sup> NIT Raipur</a>
                         </div>
                         <div class="card qb-project-card qbCardShadow">
                             <div class="qb-project-card-icon">
                                 <i class="fas fa-calculator"></i>
                             </div>
-                            <a href="https://ayushagrawal25.github.io/calculator" style="text-decoration: none;">Calculator</a>
+                            <a href="https://ayushagrawal25.github.io/calculator" class="qbCardTitle" style="text-decoration: none;">Calculator</a>
                         </div>
                         <div class="card qb-project-card qbCardShadow">
                             <div class="qb-project-card-icon">
                                 <i class="fas fa-crop"></i>
                             </div>
-                            <a href="https://ayushagrawal25.github.io/calculator" style="text-decoration: none;">Image Cropper</a>
+                            <a href="https://ayushagrawal25.github.io/calculator" class="qbCardTitle" style="text-decoration: none;">Image Cropper</a>
                         </div>
                     </div>
                 </div>
@@ -139,37 +139,37 @@
                                 <div class="qb-skill-card-icon">
                                     <i class="far fa-file-code"></i>
                                 </div>
-                                <div class="qb-skill-card-text">HTML</div>
+                                <div class="qb-skill-card-text qbCardTitle">HTML</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
                                     <i class="fab fa-css3-alt"></i>
                                 </div>
-                                <div class="qb-skill-card-text">CSS</div>
+                                <div class="qb-skill-card-text qbCardTitle">CSS</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
                                     <i class="fab fa-js-square"></i>
                                 </div>
-                                <div class="qb-skill-card-text">JS</div>
-                            </div>
-                            <div class="qb-skill-card card qbCardShadow">
-                                <div class="qb-skill-card-icon">
-                                    <i class="fab fa-angular"></i>
-                                </div>
-                                <div class="qb-skill-card-text">Angular</div>
-                            </div>
-                            <div class="qb-skill-card card qbCardShadow">
-                                <div class="qb-skill-card-icon">
-                                    <i class="fab fa-angular"></i><span style="font-size: 25px;">js</span>
-                                </div>
-                                <div class="qb-skill-card-text">AngularJs</div>
+                                <div class="qb-skill-card-text qbCardTitle">JS</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
                                     <i class="fab fa-react"></i>
                                 </div>
-                                <div class="qb-skill-card-text">React</div>
+                                <div class="qb-skill-card-text qbCardTitle">React</div>
+                            </div>
+                            <div class="qb-skill-card card qbCardShadow">
+                                <div class="qb-skill-card-icon">
+                                    <i class="fab fa-angular"></i>
+                                </div>
+                                <div class="qb-skill-card-text  qbCardTitle">Angular</div>
+                            </div>
+                            <div class="qb-skill-card card qbCardShadow">
+                                <div class="qb-skill-card-icon">
+                                    <i class="fab fa-angular"></i><span style="font-size: 25px;">js</span>
+                                </div>
+                                <div class="qb-skill-card-text qbCardTitle">AngularJs</div>
                             </div>
                         </div>
                         <div class="qb-skill-head">
@@ -180,13 +180,13 @@
                                 <div class="qb-skill-card-icon">
                                     <i class="fab fa-node"></i>
                                 </div>
-                                <div class="qb-skill-card-text">NodeJs</div>
+                                <div class="qb-skill-card-text qbCardTitle">NodeJs</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
                                     <i class="fab fa-php"></i>
                                 </div>
-                                <div class="qb-skill-card-text">PHP</div>
+                                <div class="qb-skill-card-text qbCardTitle">PHP</div>
                             </div>
                         </div>
                         <div class="qb-skill-head">
@@ -197,13 +197,13 @@
                                 <div class="qb-skill-card-icon">
                                     C++
                                 </div>
-                                <div class="qb-skill-card-text">C++/C</div>
+                                <div class="qb-skill-card-text qbCardTitle">C++/C</div>
                             </div>
                             <div class="qb-skill-card card qbCardShadow">
                                 <div class="qb-skill-card-icon">
                                     <i class="fab fa-python"></i>
                                 </div>
-                                <div class="qb-skill-card-text">Python</div>
+                                <div class="qb-skill-card-text qbCardTitle">Python</div>
                             </div>
                         </div>
                     </div>
